istio/istiogate.yml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: msfrontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: msfront
spec:
  hosts:
  - "*"
  gateways:
  - msfrontend-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: msfront
        port:
          number: 9540
